--- a/SimpleCSE/SegEvalExample.ipynb
+++ b/SimpleCSE/SegEvalExample.ipynb
@@ -23,22 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating single-method metrics v1.5 for example_data/imgs\n",
-      "{'Matched Cell': {'NumberOfCellsPer100SquareMicrons': 1.3776182999409543, 'FractionOfForegroundOccupiedByCells': 0.9139552591250374, '1-FractionOfBackgroundOccupiedByCells': 0.07701391043377503, 'FractionOfCellMaskInForeground': 0.7648416245431748, '1/(ln(StandardDeviationOfCellSize)+1)': 0.16336128718458506, 'FractionOfMatchedCellsAndNuclei': 1.0, '1/(AvgCVForegroundOutsideCells+1)': 0.09343860787391506, 'FractionOfFirstPCForegroundOutsideCells': 0.7157825825930578}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.2045461213373561, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.4881621793693247, 'AvgSilhouetteOver2~10NumberOfClusters': 0.057437420796382}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.20268239360924561, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.5332347317496605, 'AvgSilhouetteOver2~10NumberOfClusters': 0.2254152572310381}, 'QualityScore': 0.13032760796679677}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# illustration for a 2D image \n",
-    "img_path = Path('example_data/imgs/2D_CODEX.ome.tiff')\n",
-    "mask_path = Path('example_data/masks/2D_CODEX.ome.tiff')\n",
+    "img_path = Path('./example_data/imgs/2D_CODEX.ome.tiff')\n",
+    "mask_path = Path('./example_data/masks/2D_CODEX.ome.tiff')\n",
     "output_directory = Path('results')\n",
     "\n",
     "# two choices: give empty model in which case read_and_eval_seg will use the default 2D model\n",
@@ -46,49 +37,24 @@
     "# or give a specific model\n",
     "#PCA_model = pickle.load( open( \"2D_PCA_model.pickle\", \"rb\" ))\n",
     "\n",
-    "seg_metrics = read_and_eval_seg(img_path, mask_path, PCA_model, output_directory)\n",
+    "seg_metrics_2D = read_and_eval_seg(img_path, mask_path, PCA_model, output_directory)\n",
     "\n",
-    "print(seg_metrics)"
+    "print(seg_metrics_2D)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating single-method metrics v1.5 for example_data/imgs\n",
-      "{'Matched Cell': {'NumberOfCellsPer100SquareMicrons': 1.3776182999409543, 'FractionOfForegroundOccupiedByCells': 0.9139643615647609, '1-FractionOfBackgroundOccupiedByCells': 0.07703737026852353, 'FractionOfCellMaskInForeground': 0.7650158452081655, '1/(ln(StandardDeviationOfCellSize)+1)': 0.16336128718458506, 'FractionOfMatchedCellsAndNuclei': 1.0, '1/(AvgCVForegroundOutsideCells+1)': 0.0934432339297593, 'FractionOfFirstPCForegroundOutsideCells': 0.7163386307662011}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.20430029228313443, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.4886003316890298, 'AvgSilhouetteOver2~10NumberOfClusters': 0.05786529575259167}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.2028591160797523, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.5333378213018224, 'AvgSilhouetteOver2~10NumberOfClusters': 0.2258065871400864}, 'QualityScore': 0.13137588446137866}\n"
-     ]
-    }
-   ],
-   "source": [
-    "img_path = Path('example_data/imgs/2D_CODEX.ome.tiff')\n",
-    "mask_path = Path('example_data/masks/2D_CODEX.ome.tiff')\n",
-    "output_directory = Path('results')\n",
-    "\n",
-    "# use a specific model (actually the same as the default)\n",
-    "PCA_model = pickle.load( open( \"2D_PCA_model.pickle\", \"rb\" ))\n",
-    "\n",
-    "seg_metrics2 = read_and_eval_seg(img_path, mask_path, PCA_model, output_directory)\n",
-    "\n",
-    "print(seg_metrics2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating single-method metrics v1.5 for example_data/imgs\n",
-      "{'Matched Cell': {'NumberOfCellsPer100CubicMicrons': 0.7077738508763257, 'FractionOfForegroundOccupiedByCells': 0.14266366802153443, '1-FractionOfBackgroundOccupiedByCells': 1.0025906439112604, 'FractionOfCellMaskInForeground': 0.9822079836750122, '1/(ln(StandardDeviationOfCellSize)+1)': 0.14996549000573892, '1/(AvgCVForegroundOutsideCells+1)': 0.31104260524313904, 'FractionOfFirstPCForegroundOutsideCells': 0.1725867652852338}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5107179921178507, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.1667737531485708, 'AvgSilhouetteOver2~10NumberOfClusters': 0.07133055907968484}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5567450565441361, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.18322358897618432, 'AvgSilhouetteOver2~10NumberOfClusters': 0.0876643704226369}, 'QualityScore': 39.85449093420033}\n"
+      "Calculating evaluation metrics v1.6 for 3D_IMC.ome.tiff\n",
+      "[<Quantity(1000, 'nanometer')>, <Quantity(1000, 'nanometer')>, <Quantity(2000, 'nanometer')>]\n",
+      "{'Matched Cell': {'NumberOfCellsPer100CubicMicrons': 0.09183568058951136, 'FractionOfForegroundOccupiedByCells': 0.5828236222106423, '1-FractionOfBackgroundOccupiedByCells': 0.8169313900712654, 'FractionOfCellMaskInForeground': 0.9651429506031927, '1/(CVOfCellSize+1)': 0.7173306442825295, 'WeightedAvgCellSizeinCubicMicrons': 681.3255317265257, '1/(AvgCVForegroundOutsideCells+1)': 0.31324021990306844, 'FractionOfFirstPCForegroundOutsideCells': 0.17463488462068044}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5009548984989369, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.19543225539965145, 'AvgSilhouetteOver1~10NumberOfClusters': 0.04568973987345392}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.555539281578267, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.18492543709576048, 'AvgSilhouetteOver1~10NumberOfClusters': 0.09949116655140815}}\n",
+      "{'Matched Cell': {'NumberOfCellsPer100CubicMicrons': 0.09183568058951136, 'FractionOfForegroundOccupiedByCells': 0.5828236222106423, '1-FractionOfBackgroundOccupiedByCells': 0.8169313900712654, 'FractionOfCellMaskInForeground': 0.9651429506031927, '1/(CVOfCellSize+1)': 0.7173306442825295, 'WeightedAvgCellSizeinCubicMicrons': 681.3255317265257, '1/(AvgCVForegroundOutsideCells+1)': 0.31324021990306844, 'FractionOfFirstPCForegroundOutsideCells': 0.17463488462068044}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5009548984989369, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.19543225539965145, 'AvgSilhouetteOver1~10NumberOfClusters': 0.04568973987345392}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.555539281578267, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.18492543709576048, 'AvgSilhouetteOver1~10NumberOfClusters': 0.09949116655140815}, 'QualityScore': 78.5524038988313}\n"
      ]
     }
    ],
@@ -100,11 +66,11 @@
     "# two choices: give empty model in which case read_and_eval_seg will use the default 3D model\n",
     "PCA_model = []\n",
     "# or give a specific model\n",
-    "#PCA_model = pickle.load( open( \"3D_PCA_model.pickle\", \"rb\" ))\n",
+    "# PCA_model = pickle.load( open( \"3D_PCA_model.pickle\", \"rb\" ))\n",
     "\n",
-    "seg_metrics3 = read_and_eval_seg(img_path, mask_path, PCA_model, output_directory)\n",
+    "seg_metrics_3D = read_and_eval_seg(img_path, mask_path, PCA_model, output_directory)\n",
     "\n",
-    "print(seg_metrics3)"
+    "print(seg_metrics_3D)"
    ]
   },
   {
