--- a/SimpleCSE/SegEvalExample.ipynb
+++ b/SimpleCSE/SegEvalExample.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating evaluation metrics v1.5 for 2D_CODEX.ome.tiff\n",
+      "{'Matched Cell': {'NumberOfCellsPer100SquareMicrons': 1.3776182999409543, 'FractionOfForegroundOccupiedByCells': 0.9160630053908356, '1-FractionOfBackgroundOccupiedByCells': 1, 'FractionOfCellMaskInForeground': 1.0, '1/(ln(StandardDeviationOfCellSize)+1)': 0.16336128718458506, 'FractionOfMatchedCellsAndNuclei': 1.0, '1/(AvgCVForegroundOutsideCells+1)': 0.10351006628637523, 'FractionOfFirstPCForegroundOutsideCells': 0.680608725720861}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.2033029311840032, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.48956113794908573, 'AvgSilhouetteOver2~10NumberOfClusters': 0.05405232292871503}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.20192223619280728, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.5295864678909784, 'AvgSilhouetteOver2~10NumberOfClusters': 0.2204158164172279}, 'QualityScore': 1.633534981503763}\n"
+     ]
+    }
+   ],
    "source": [
     "# illustration for a 2D image \n",
     "img_path = Path('./example_data/imgs/2D_CODEX.ome.tiff')\n",
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,8 +62,8 @@
      "text": [
       "Calculating evaluation metrics v1.6 for 3D_IMC.ome.tiff\n",
       "[<Quantity(1000, 'nanometer')>, <Quantity(1000, 'nanometer')>, <Quantity(2000, 'nanometer')>]\n",
-      "{'Matched Cell': {'NumberOfCellsPer100CubicMicrons': 0.09183568058951136, 'FractionOfForegroundOccupiedByCells': 0.5828236222106423, '1-FractionOfBackgroundOccupiedByCells': 0.8169313900712654, 'FractionOfCellMaskInForeground': 0.9651429506031927, '1/(CVOfCellSize+1)': 0.7173306442825295, 'WeightedAvgCellSizeinCubicMicrons': 681.3255317265257, '1/(AvgCVForegroundOutsideCells+1)': 0.31324021990306844, 'FractionOfFirstPCForegroundOutsideCells': 0.17463488462068044}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5009548984989369, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.19543225539965145, 'AvgSilhouetteOver1~10NumberOfClusters': 0.04568973987345392}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.555539281578267, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.18492543709576048, 'AvgSilhouetteOver1~10NumberOfClusters': 0.09949116655140815}}\n",
-      "{'Matched Cell': {'NumberOfCellsPer100CubicMicrons': 0.09183568058951136, 'FractionOfForegroundOccupiedByCells': 0.5828236222106423, '1-FractionOfBackgroundOccupiedByCells': 0.8169313900712654, 'FractionOfCellMaskInForeground': 0.9651429506031927, '1/(CVOfCellSize+1)': 0.7173306442825295, 'WeightedAvgCellSizeinCubicMicrons': 681.3255317265257, '1/(AvgCVForegroundOutsideCells+1)': 0.31324021990306844, 'FractionOfFirstPCForegroundOutsideCells': 0.17463488462068044}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5009548984989369, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.19543225539965145, 'AvgSilhouetteOver1~10NumberOfClusters': 0.04568973987345392}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.555539281578267, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.18492543709576048, 'AvgSilhouetteOver1~10NumberOfClusters': 0.09949116655140815}, 'QualityScore': 78.5524038988313}\n"
+      "{'Matched Cell': {'NumberOfCellsPer100CubicMicrons': 0.09183568058951136, 'FractionOfForegroundOccupiedByCells': 0.582823141640616, '1-FractionOfBackgroundOccupiedByCells': 0.8171408955488162, 'FractionOfCellMaskInForeground': 0.9652014427859826, '1/(CVOfCellSize+1)': 0.7173306442825295, 'WeightedAvgCellSizeinCubicMicrons': 681.3255317265257, '1/(AvgCVForegroundOutsideCells+1)': 0.3132533093604995, 'FractionOfFirstPCForegroundOutsideCells': 0.174736508812289}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5009509798894507, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.19535199942277992, 'AvgSilhouetteOver1~10NumberOfClusters': 0.0456268620972059}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5555357682043812, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.1849088726734793, 'AvgSilhouetteOver1~10NumberOfClusters': 0.09947676342086245}}\n",
+      "{'Matched Cell': {'NumberOfCellsPer100CubicMicrons': 0.09183568058951136, 'FractionOfForegroundOccupiedByCells': 0.582823141640616, '1-FractionOfBackgroundOccupiedByCells': 0.8171408955488162, 'FractionOfCellMaskInForeground': 0.9652014427859826, '1/(CVOfCellSize+1)': 0.7173306442825295, 'WeightedAvgCellSizeinCubicMicrons': 681.3255317265257, '1/(AvgCVForegroundOutsideCells+1)': 0.3132533093604995, 'FractionOfFirstPCForegroundOutsideCells': 0.174736508812289}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5009509798894507, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.19535199942277992, 'AvgSilhouetteOver1~10NumberOfClusters': 0.0456268620972059}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5555357682043812, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.1849088726734793, 'AvgSilhouetteOver1~10NumberOfClusters': 0.09947676342086245}, 'QualityScore': 78.5683168775134}\n"
      ]
     }
    ],
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": []
