update package requirements

--- a/SimpleCSE/SegEvalExample.ipynb
+++ b/SimpleCSE/SegEvalExample.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,15 +23,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CellSegmentationEvaluator (SimpleCSE) v1.5.12\n",
       "Calculating evaluation metrics v1.5 for 2D_CODEX.ome.tiff\n",
-      "{'Matched Cell': {'NumberOfCellsPer100SquareMicrons': 1.3776182999409543, 'FractionOfForegroundOccupiedByCells': 0.9160630053908356, '1-FractionOfBackgroundOccupiedByCells': 1, 'FractionOfCellMaskInForeground': 1.0, '1/(ln(StandardDeviationOfCellSize)+1)': 0.16336128718458506, 'FractionOfMatchedCellsAndNuclei': 1.0, '1/(AvgCVForegroundOutsideCells+1)': 0.10351006628637523, 'FractionOfFirstPCForegroundOutsideCells': 0.680608725720861}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.2033029311840032, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.48956113794908573, 'AvgSilhouetteOver2~10NumberOfClusters': 0.05405232292871503}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.20192223619280728, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.5295864678909784, 'AvgSilhouetteOver2~10NumberOfClusters': 0.2204158164172279}, 'QualityScore': 1.633534981503763}\n"
+      "1704 cells repaired out of 2657\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "30-Mar-25 11:30:07 - pint.util - WARNING  - Calling the getitem method from a UnitRegistry is deprecated. use `parse_expression` method or use the registry as a callable.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Assuming OME pixel sizes are in microns...\n",
+      "{'Matched Cell': {'NumberOfCellsPer100SquareMicrons': 1.3776182999409543, 'FractionOfForegroundOccupiedByCells': 0.9160630053908356, '1-FractionOfBackgroundOccupiedByCells': 1, 'FractionOfCellMaskInForeground': 1.0, '1/(ln(StandardDeviationOfCellSize)+1)': 0.16336128718458506, 'FractionOfMatchedCellsAndNuclei': 1.0, '1/(AvgCVForegroundOutsideCells+1)': 0.10351006628637523, 'FractionOfFirstPCForegroundOutsideCells': 0.6784067039776351}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.20240520395638273, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.4948003553851429, 'AvgSilhouetteOver2~10NumberOfClusters': 0.149444447523603}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.20148681614827335, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.5187190634287074, 'AvgSilhouetteOver2~10NumberOfClusters': 0.30517771814585104}, 'QualityScore': 1.7467165002734093}\n"
      ]
     }
    ],
@@ -40,7 +56,8 @@
     "img_path = Path('./example_data/imgs/2D_CODEX.ome.tiff')\n",
     "mask_path = Path('./example_data/masks/2D_CODEX.ome.tiff')\n",
     "output_directory = Path('results')\n",
-    "\n",
+    "if not output_directory.exists():\n",
+    "    output_directory.mkdir()\n",
     "# two choices: give empty model in which case read_and_eval_seg will use the default 2D model\n",
     "PCA_model = []\n",
     "# or give a specific model\n",
@@ -71,7 +88,8 @@
     "img_path = Path('example_data/imgs/3D_IMC.ome.tiff')\n",
     "mask_path = Path('example_data/masks/3D_IMC.ome.tiff')\n",
     "output_directory = Path('results')\n",
-    "\n",
+    "if not output_directory.exists():\n",
+    "    output_directory.mkdir()\n",
     "# two choices: give empty model in which case read_and_eval_seg will use the default 3D model\n",
     "PCA_model = []\n",
     "# or give a specific model\n",
