--- a/SimpleCSE/SegEvalExample.ipynb
+++ b/SimpleCSE/SegEvalExample.ipynb
@@ -23,31 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CellSegmentationEvaluator (SimpleCSE) v1.5.12\n",
+      "File missing physical pixel sizes...\n",
+      "Enter size of x pixels: 0.345\n",
+      "Enter size of y pixels: 0.345\n",
       "Calculating evaluation metrics v1.5 for 2D_CODEX.ome.tiff\n",
-      "1704 cells repaired out of 2657\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "30-Mar-25 11:30:07 - pint.util - WARNING  - Calling the getitem method from a UnitRegistry is deprecated. use `parse_expression` method or use the registry as a callable.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assuming OME pixel sizes are in microns...\n",
-      "{'Matched Cell': {'NumberOfCellsPer100SquareMicrons': 1.3776182999409543, 'FractionOfForegroundOccupiedByCells': 0.9160630053908356, '1-FractionOfBackgroundOccupiedByCells': 1, 'FractionOfCellMaskInForeground': 1.0, '1/(ln(StandardDeviationOfCellSize)+1)': 0.16336128718458506, 'FractionOfMatchedCellsAndNuclei': 1.0, '1/(AvgCVForegroundOutsideCells+1)': 0.10351006628637523, 'FractionOfFirstPCForegroundOutsideCells': 0.6784067039776351}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.20240520395638273, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.4948003553851429, 'AvgSilhouetteOver2~10NumberOfClusters': 0.149444447523603}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.20148681614827335, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.5187190634287074, 'AvgSilhouetteOver2~10NumberOfClusters': 0.30517771814585104}, 'QualityScore': 1.7467165002734093}\n"
+      "1704 cells repaired out of 2657\n",
+      "{'Matched Cell': {'NumberOfCellsPer100SquareMicrons': 1.6493948150049207, 'FractionOfForegroundOccupiedByCells': 0.9160630053908356, '1-FractionOfBackgroundOccupiedByCells': 1, 'FractionOfCellMaskInForeground': 1.0, '1/(ln(StandardDeviationOfCellSize)+1)': 0.16336128718458506, 'FractionOfMatchedCellsAndNuclei': 1.0, '1/(AvgCVForegroundOutsideCells+1)': 0.10351006628637523, 'FractionOfFirstPCForegroundOutsideCells': 0.6784067039776349}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.20761432821250042, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.49480035538514294, 'AvgSilhouetteOver2~10NumberOfClusters': 0.149444447523603}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.20368049387013618, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.5187190634287074, 'AvgSilhouetteOver2~10NumberOfClusters': 0.30517771814585104}, 'QualityScore': 1.880459506752857}\n"
      ]
     }
    ],
@@ -70,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -78,9 +66,15 @@
      "output_type": "stream",
      "text": [
       "Calculating evaluation metrics v1.6 for 3D_IMC.ome.tiff\n",
-      "[<Quantity(1000, 'nanometer')>, <Quantity(1000, 'nanometer')>, <Quantity(2000, 'nanometer')>]\n",
-      "{'Matched Cell': {'NumberOfCellsPer100CubicMicrons': 0.09183568058951136, 'FractionOfForegroundOccupiedByCells': 0.582823141640616, '1-FractionOfBackgroundOccupiedByCells': 0.8171408955488162, 'FractionOfCellMaskInForeground': 0.9652014427859826, '1/(CVOfCellSize+1)': 0.7173306442825295, 'WeightedAvgCellSizeinCubicMicrons': 681.3255317265257, '1/(AvgCVForegroundOutsideCells+1)': 0.3132533093604995, 'FractionOfFirstPCForegroundOutsideCells': 0.174736508812289}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5009509798894507, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.19535199942277992, 'AvgSilhouetteOver1~10NumberOfClusters': 0.0456268620972059}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5555357682043812, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.1849088726734793, 'AvgSilhouetteOver1~10NumberOfClusters': 0.09947676342086245}}\n",
-      "{'Matched Cell': {'NumberOfCellsPer100CubicMicrons': 0.09183568058951136, 'FractionOfForegroundOccupiedByCells': 0.582823141640616, '1-FractionOfBackgroundOccupiedByCells': 0.8171408955488162, 'FractionOfCellMaskInForeground': 0.9652014427859826, '1/(CVOfCellSize+1)': 0.7173306442825295, 'WeightedAvgCellSizeinCubicMicrons': 681.3255317265257, '1/(AvgCVForegroundOutsideCells+1)': 0.3132533093604995, 'FractionOfFirstPCForegroundOutsideCells': 0.174736508812289}, 'Nucleus (including nuclear membrane)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5009509798894507, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.19535199942277992, 'AvgSilhouetteOver1~10NumberOfClusters': 0.0456268620972059}, 'Cell Not Including Nucleus (cell membrane plus cytoplasm)': {'1/(AvgOfWeightedAvgCVMeanCellIntensitiesOver1~10NumberOfClusters+1)': 0.5555357682043812, 'AvgOfWeightedAvgFractionOfFirstPCMeanCellIntensitiesOver1~10NumberOfClusters': 0.1849088726734793, 'AvgSilhouetteOver1~10NumberOfClusters': 0.09947676342086245}, 'QualityScore': 78.5683168775134}\n"
+      "Using sum of all channels for segmenting image foreground from background\n",
+      "PhysicalPixelSizes(Z=2.0, Y=1.0, X=1.0)\n",
+      "Assuming OME pixel sizes are in microns...\n",
+      "CSE3D v1.5\n",
+      "Image dimensions (38, 50, 514, 452)\n",
+      "Mask dimensions (3, 50, 514, 452)\n",
+      "Voxel size is  2.0  cubic micrometers\n",
+      "Using foreground identification disk filters of sizes  (1, 2, 10, 3)\n",
+      "Using foreground identification area filters of sizes  (10000.0, 500.0)\n"
      ]
     }
    ],
@@ -102,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
